<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="michaelgreen.virtual_fridge.StartPageN">

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/goog"
            android:contentDescription="@string/logo"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:hint="@string/username"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            />

        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:gravity="center">
            <Button
                android:id="@+id/sign_in"
                android:layout_gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sign_in"
                android:onClick="buttonListener"/>
            <Button
                android:id="@+id/create_account"
                android:layout_gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/create_account"
                android:onClick="buttonListener"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>