<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="michaelgreen.virtual_fridge.CreateAccount">

    <RelativeLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/create_account"
            android:textSize="40dp"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_weight="8"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:hint="@string/username"
            />

        <EditText
            android:id="@+id/confirm_username"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:hint="@string/confirm_username"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            />


        <Button
            android:id="@+id/try_create_account"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:text="@string/create_account"
            android:onClick="tryCreateAccount"/>

    </LinearLayout>

</LinearLayout>
