<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="michaelgreen.virtual_fridge.FridgeMainScreen">

    <LinearLayout
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fridge"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/fridge"
            android:textSize="40dp"
            />

        <Button
            android:id="@+id/use_item"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/use_item"
            android:onClick="buttonListener"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/add_to_fridge"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/add_to_fridge"
                android:onClick="buttonListener"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/options"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/options"
                android:onClick="buttonListener"
                />
            <Button
                android:id="@+id/view_items"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/view_items"
                android:onClick="buttonListener"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
