<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="michaelgreen.virtual_fridge.AddItem">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:isScrollContainer="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/add_to_fridge"
                android:layout_width="match_parent"
                android:layout_height="105dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/add_to_fridge"
                android:textSize="40dp"
                />

            <EditText
                android:id="@+id/enter_item_name"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:hint="@string/enter_item_name"
                />

            <ScrollView
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:fillViewport="true"
                android:isScrollContainer="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                </LinearLayout>

            </ScrollView>

            <EditText
                android:id="@+id/units"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:hint="@string/units"
                />

            <EditText
                android:id="@+id/amount"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:inputType="numberDecimal|numberSigned"
                android:hint="@string/amount"
                />

            <LinearLayout
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/expiry_date_button"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:hint="@string/expiry_date"
                    android:onClick="buttonListener"
                    />

                <TextView
                    android:id="@+id/expiry_date_text"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:hint="@string/expiry_date"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/add_item_button"
                android:layout_gravity="center_horizontal"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/add_item"
                android:onClick="buttonListener"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
