<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="michaelgreen.virtual_fridge.AddRecipe">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:isScrollContainer="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/add_recipe"
                android:layout_width="match_parent"
                android:layout_height="105dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/add_recipe"
                android:textSize="40dp"
                />

            <EditText
                android:id="@+id/search"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:hint="@string/search"
                />

            <ScrollView
                android:layout_width="350dp"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal"
                android:fillViewport="true"
                android:isScrollContainer="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                </LinearLayout>

            </ScrollView>

            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:gravity="center">

                <Button
                    android:id="@+id/add_item"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/add_item"
                    android:onClick="dialogPicker"/>

            </LinearLayout>

            <EditText
                android:id="@+id/enter_method"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:hint="@string/enter_method"
                android:layout_gravity="center_horizontal"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLength="2000"
                android:maxLines="5" />

            <Button
            android:id="@+id/add_recipe_button"
            android:layout_gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add_recipe"
            android:onClick="dialogPicker"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
